--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     
     implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
     implementation 'org.slf4j:slf4j-simple:2.0.13'
-
+    implementation 'org.xerial:sqlite-jdbc:3.42.0.0' 
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
 }
 
