--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,16 +17,15 @@ repositories {
 }
 
 dependencies {
-    implementation 'io.javalin:javalin:6.3.0'
-    
+    implementation 'io.javalin:javalin:5.6.1'
     implementation 'org.thymeleaf:thymeleaf:3.1.2.RELEASE'
-    implementation 'org.slf4j:slf4j-simple:2.0.13'
-    implementation 'org.xerial:sqlite-jdbc:3.42.0.0' 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+    implementation 'org.slf4j:slf4j-simple:2.0.9'
+    implementation 'org.xerial:sqlite-jdbc:3.44.1.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'
 }
 
 application {
-    mainClass = 'com.example.Main'
+    mainClass = 'com.example.TodoAppDatabase'
 }
 
 test {
